# 2024A_INF155_12_TP2_Equipe12

./: .gitignore  CMakeLists.txt  README.md  bd_complete.txt  bd_simple.txt  bd_test.txt  chatBot.c  chatBot.h  couleurs.c  couleurs.h  dictionnaire (test).txt  donnees.c  donnees.h  entree.c  entree.h  except.txt  liste.c  liste.h  main.c  mon_malloc.c  mon_malloc.h  paire.c  paire.h  utils.c  utils.h
